--- a/exercicio-8/index.html
+++ b/exercicio-8/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./main.js" defer></script>
-    <title>Objetos</title>
+    <title>Cadastro de Imóveis</title>
 </head>
 <body>
-    <h1>Objetos</h1>
+    <h1>Cadastre seu imóvel</h1>
 </body>
 </html>
