--- a/funcoes/return.html
+++ b/funcoes/return.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./return.js"></script>
+    <script src="./return.js" defer></script>
     <title>Retorno</title>
 </head>
 <body>
