exercicio 11 - escalação de time

--- a/exercicio-11/escalacao.html
+++ b/exercicio-11/escalacao.html
@@ -46,6 +46,6 @@
     <br>
 
     <h3>Escalação Final:</h3>
-    <section id="escalacaoList"></section>
+    <ul id="escalacaoList"></ul>
 </body>
 </html>
