--- a/exercicio-11/escalacao.html
+++ b/exercicio-11/escalacao.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Escalação de Times</h1>
 
+    <hr>
+
+    <h2>Escalação de Jogador</h2>
+
     <label for="position">Posição:</label>
     <input type="text" id="position" placeholder="Ex: Goleiro">
 
@@ -31,19 +35,17 @@
 
     <br>
     <br>
-    <br>
+    <hr>
+
+    <h2>Remover Jogador</h2>
 
     <label for="removePlayer">Digite o número da camisa do jogador que você deseja remover:</label>
     <input type="number" id="removePlayer" placeholder="Ex: 08">
 
-    <br>
-    <br>
-
     <input type="button" value="Remover" onclick="removerPlayer()">
 
     <br>
-    <br>
-    <br>
+    <hr>
 
     <h3>Escalação Final:</h3>
     <ul id="escalacaoList"></ul>
