--- a/DOM/eventosDOM.html
+++ b/DOM/eventosDOM.html
@@ -22,6 +22,7 @@
         <input type="password" name="passwordConfirmation" id="passwordConfirmation">
         <br>
         <button id="register-button">Registrar</button>
+        <button onclick="removerEvento()">Remover Registro</button>
     </section>
 </body>
 </html>
