--- a/DOM/formularios.html
+++ b/DOM/formularios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,6 +61,6 @@
 
     <button type="submit">Finalizar Pedido</button>
     </form>
-    
+
 </body>
 </html>
