tirei o placeholder do input no html. testando js

--- a/DOM/atributosDOM.html
+++ b/DOM/atributosDOM.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./atributosDOM.js"></script>
+    <script src="./atributosDOM.js" defer></script>
     <title>Manipulando Atributos Com Javascript</title>
 </head>
 <body>
     <h1>Manipulando Atributos Com Javascript</h1>
     <hr>
 
-    <input type="text" name="input" id="input" data-something="Algum Valor" placeholder="Digite Algo...">
+    <input type="text" name="input" id="input" data-something="Algum Valor">
 
     <button id="value">Mudar Valor</button>
     <button id="type">Mudar Tipo</button>
