--- a/exercicio-13/index.html
+++ b/exercicio-13/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <script src="./main.js"></script>
     <title>Jogo da Velha</title>
 </head>
 <body>
@@ -13,10 +14,10 @@
     <input type="text" id="player1" placeholder="Nome do Jogador 1">
     <label for="player2">O</label>
     <input type="text" id="player2" placeholder="Nome do Jogador 2">
-    <button id="start">Começar!</button>
+    <button id="start">Começar</button>
     <h2>Vez de: <span id="turnPlayer"></span></h2>
 
-    <section>
+    <section id="gameBoard">
         <span data-region="0.0"></span>
         <span data-region="0.1"></span>
         <span data-region="0.2"></span>
