adicionei um botão no html

--- a/armazenamento/index.html
+++ b/armazenamento/index.html
@@ -13,6 +13,7 @@
     <label for="session">Digite uma informação:</label>
     <input type="text" id="session">
     <button id="sessionBtn">Guardar!</button>
+    <button id="readSession">Ler!</button>
     <br>
     <h2>Local Storage</h2>
     <label for="local">Digite uma informação:</label>
