criei mais um btn e mudei a lang do html

--- a/armazenamento/index.html
+++ b/armazenamento/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +19,7 @@
     <label for="local">Digite uma informação:</label>
     <input type="text" id="local">
     <button id="localBtn">Guardar!</button>
+    <button id="readLocal">Ler</button>
     <br>
     <h2>Cookies</h2>
     <label for="cookie">Digite uma informação:</label>
